[package]
name = "thread_db"
version = "0.1.3"
edition = "2021"
description = "Rust wrapper for libthread_db."
license = "MIT"
repository = "https://github.com/godzie44/thread_db"
readme = "./README.md"
authors = ["Konstantin Derevtsov <godzie@yandex.ru>"]

[dependencies]
nix = "0.26.1"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
object = "0.30.1"
proc-maps = "0.3.0"
thiserror = "1.0.38"
libloading = "0.7"

[dev-dependencies]
serial_test = "0.10.0"

[[bin]]
name = "tls_test"
test = false
