[package]
name = "thread_db"
version = "0.1.4"
edition = "2021"
description = "Rust wrapper for libthread_db."
license = "MIT"
repository = "https://github.com/godzie44/thread_db"
readme = "./README.md"
authors = ["Konstantin Derevtsov <godzie@yandex.ru>"]

[dependencies]
nix = {version = "0.27.1", features = ["ptrace", "signal", "personality", "uio"]}
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
object = "0.32.1"
proc-maps = "0.3.0"
thiserror = "1.0.38"
libloading = "0.8.1"

[dev-dependencies]
serial_test = "2.0.0"

[[bin]]
name = "tls_test"
test = false
